--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@
     --btn-padding: 0.6rem 2rem;
     --search-padding: 0.6rem 1rem;
     --card-padding: 1rem ;
+
+    --top-left:5.4rem;
+    --top-right:-18rem;
 }
 
 *, *::before, *::after{
@@ -111,4 +114,30 @@ nav .create{
     gap: 2rem;
 }
 
+/* ================main============= */
+main{
+    position: relative;
+    top: 5.4rem;
+}
+main .container{
+    display: grid;
+    grid-template-columns: 18vh auto 20vw;
+    column-gap: 2rem;
+    position: relative;
+}
+main .container .left{
+    height: max-content;
+    position: sticky;
+    top: var(--top-left);
+
+}
+main .container .left .profile{
+    padding: var(--card-padding);
+    background: var(--white);
+    border-radius: var(--card-border-radius);
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+    width: 100%;
+}
 
