--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
 body{
     font-family: 'Poppins', sans-serif;
    color: var(--dark);
-    overflow: hidden;
+   
     background: var(--light);
 
 }
@@ -121,7 +121,7 @@ main{
 }
 main .container{
     display: grid;
-    grid-template-columns: 18vh auto 20vw;
+    grid-template-columns: 18vw auto 20vw;
     column-gap: 2rem;
     position: relative;
 }
@@ -141,3 +141,70 @@ main .container .left .profile{
     width: 100%;
 }
 
+.left .sidebar{
+ margin-top:1rem ; 
+ background: var(--white);
+ border-radius: var(--card-border-radius);
+
+}
+.left .sidebar .menu-item{
+    display: flex;
+    align-items: center;
+    height: 4rem;
+    cursor: pointer;
+    transition: all 300ms ease;
+    position: relative;
+}
+.left .sidebar .menu-item:hover{
+    background: var(--light);
+}
+.left .sidebar i{
+    font-size: 1.4rem;
+    color: var(--gray);
+    margin-left: 2rem;
+    position: relative;
+}
+.left .sidebar i .notification-count{
+    background: var(--danger);
+    color: var(--white);
+    font-size: 0.7rem;
+    width: fit-content;
+    border-radius: 0.8rem;
+    padding: 0.1rem 0.4rem;
+    position: absolute;
+    top: -0.2rem;
+    right: -0.3rem;
+}
+.left .sidebar h3{
+    margin-left: 1.5rem;
+    font-size: 1rem;
+}
+
+.left .sidebar .active{
+    background: var(--light);
+}
+.left .sidebar .active i, .left .sidebar .active h3{
+    color: var(--primary);
+}
+.left .sidebar .active::before{
+    content: '';
+    display: block;
+    width: 0.5rem;
+    height: 100%;
+    position: absolute;
+    background: var(--primary);
+}
+.left .sidebar .menu-item:first-child.active{
+    border-top-left-radius: var(--card-border-radius);
+    overflow: hidden;
+}
+.left .sidebar .menu-item:last-child.active{
+    border-bottom-left-radius: var(--card-border-radius);
+    overflow: hidden;
+}
+.left .btn{
+    margin-top: 1rem;
+    width: 100%;
+    text-align: center;
+    padding: 1rem 0;
+}
