--- a/style.css
+++ b/style.css
@@ -208,3 +208,87 @@ main .container .left .profile{
     text-align: center;
     padding: 1rem 0;
 }
+
+.left .notification-popur{
+    position: absolute;
+    top: 0;
+    left: 110%;
+    width: 30rem;
+    background: var(--white);
+    border-radius: var(--card-border-radius);
+    padding: var(--card-padding);
+    box-shadow: 0 0 2rem hsl(var(--primary), 75%, 60%, 25%);
+    z-index: 8;
+    display: none;
+}
+.left .notification-popur::before{
+    content: '';
+    width: 1.2rem;
+    height: 1.2rem;
+    display: block;
+    background: var(--white);
+    position: absolute;
+    left: -0.6rem;
+    transform: rotate(45deg);
+}
+.left .notification-popur > div{
+    display: flex;
+    align-items: start;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+.left .notification-popur small{
+    display: block;
+}
+ /* middle */
+ .middle .stories{
+    display: flex;
+    justify-content: space-between;
+    height: 12rem;
+    gap: 0.5rem;
+ }
+ .middle .stories .story{
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--white);
+    font-size: 0.75rem;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+ }
+ .middle .stories .story::before{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 5rem;
+    background: linear-gradient(transparent, rgba(0, 0, 0, 0.75));
+    position: absolute;
+    bottom: 0;
+    
+ }
+ .middle .stories .story .name{
+    z-index: 2;
+ }
+ .middle .stories .story:nth-child(1){
+    background: url(./images/story-1.jpg) no-repeat center center/cover;
+ }
+ .middle .stories .story:nth-child(2){
+    background: url(./images/story-2.jpg) no-repeat center center/cover;
+ }
+ .middle .stories .story:nth-child(3){
+    background: url(./images/story-3.jpg) no-repeat center center/cover;
+ }
+ .middle .stories .story:nth-child(4){
+    background: url(./images/story-4.jpg) no-repeat center center/cover;
+ }
+ .middle .stories .story:nth-child(5){
+    background: url(./images/story-5.jpg) no-repeat center center/cover;
+ }
+ .middle .stories .story:nth-child(6){
+    background: url(./images/story-6.jpg) no-repeat center center/cover;
+ }
+ 
