--- a/style.css
+++ b/style.css
@@ -93,19 +93,19 @@ nav .container{
     align-items: center;
     justify-content: space-between;
 }
-nav .search-bar{
+.search-bar{
     background: var(--light);
     border-radius: var(--border-radius);
     padding: var(--search-padding);
 }
-nav .search-bar input[type="search"]{
+.search-bar input[type="search"]{
     background: transparent;
     width: 30vw;
     margin-left: 1rem;
     font-size: 0.9rem;
     color: var(--dark);
 }
-nav .search-bar input[type="search"]::placeholder{
+.search-bar input[type="search"]::placeholder{
     color: var(--gray);
 }
 nav .create{
@@ -367,4 +367,57 @@ main .container .left .profile{
  .middle .liked-by p{
     margin-left: 0.5rem;
  }
- 
+ /* right */
+ main .container .right{
+    height: max-content;
+    position: sticky;
+    top: var(--top-right);
+    bottom: 0;
+ }
+ .right .messages{
+    background: var(--white);
+    border-radius: var(--card-border-radius);
+    padding: var(--card-padding);
+ }
+ .right .messages .heading{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+ }
+
+ .right .messages i{
+    font-size: 1.4rem;
+ }
+ .right .messages .search-bar{
+    display: flex;
+    margin-bottom: 1rem;
+ }
+ .right .messages .category{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+ }
+ .right .messages .category h6{
+    width: 100%;
+    text-align: center;
+    border-bottom: 4px solid var(--light);
+    padding-bottom: 0.5rem;
+    font-size: 0.85rem;
+ }
+ .right .messages .category .active{
+    border-color: var(--dark);
+ }
+ .right .messages .message{
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    align-items: start;
+ }
+ .right .messages .message:last-child{
+    margin: 0;
+ }
+
+ .right .messages .message p{
+    font-size: 0.8rem;
+ }
