Requests and Messanges

--- a/style.css
+++ b/style.css
@@ -73,10 +73,10 @@ img{
     background: var(--primary);
     color: white;
 }
-.tex-bold{
+.text-bold{
     font-weight: 500;
 }
-.tex-mutd{
+.text-muted{
     color: var(--gray);
 }
 
@@ -408,6 +408,9 @@ main .container .left .profile{
  .right .messages .category .active{
     border-color: var(--dark);
  }
+ .right .messages .messages-requests{
+    color: var(--primary);
+ }
  .right .messages .message{
     display: flex;
     gap: 1rem;
@@ -420,4 +423,48 @@ main .container .left .profile{
 
  .right .messages .message p{
     font-size: 0.8rem;
+ }
+
+ .right .messages .message .profile-pic {
+    position: relative;
+    overflow: visible;
+ }
+
+ .right .profile-pic img{
+    border-radius: 50%;
+ }
+ .right .messages .message .profile-pic .active{
+    width: 0.8rem;
+    height: 0.8rem;
+    border-radius: 50%;
+    border: 3px solid var(--white);
+    background: var(--success);
+    position: absolute;
+    bottom: 0;
+    right: 0;
+ }
+
+ .right .friend-requests{
+    margin-top: 1rem;
+ }
+ .right .friend-requests h4{
+    color: var(--gray);
+    margin: 1rem 0;
+ }
+ .right .request{
+    background: var(--white);
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    margin-bottom: 0.7rem;
+ }
+
+ .right .request .info{
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
+ }
+
+ .right .request .action{
+    display: flex;
+    gap: 1rem;
  }
