--- a/style.css
+++ b/style.css
@@ -607,3 +607,59 @@ main .container .left .profile{
    margin-right: 1rem;
 }
 
+@media screen and (max-width:1200px){
+   .container{
+      width: 96%;
+   }
+   main .container {
+      grid-template-columns: 5rem auto 30vw;
+      gap: 1rem;
+   }
+   .left{
+      width: 5rem;
+      z-index: 5;
+   }
+   main .container .left .profile{
+      display: none;
+   }
+   .sidebar h3{
+      display: none;
+   }
+   .left .btn{
+      display: none;
+   }
+}
+/* media queries for small tablets and mobile phones */
+
+@media screen and (max-width:990px){
+   nav .search-bar{
+      display: none;
+   }
+   main .container {
+      grid-template-columns: 0 auto 5rem;
+      gap: 0;
+   }
+   main .container .left{
+      grid-column: 3/4;
+      position: fixed;
+      bottom: 0;
+      right: 0;
+   }
+   .left .notification-popur{
+      display: absolute;
+      left: -20rem;
+      width: 20rem;
+   }
+   .left .notification-popur::before{
+      position: absolute;
+      top: 1.3rem;
+      left: calc(20rem - 0.6rem);
+      display: block;
+   }
+   main .container .middle{
+      grid-column: 1/3;
+   }
+   main .container .right{
+      display: none;
+   }
+}
