JS Customize Color

--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@
 
 
 :root{
+   --primary-color-hue: 252;
     --white:hsl(252, 30%, 100%);
     --light:hsl(252, 30%, 95%);
     --gray:hsl(252, 15%, 65%);
-    --primary:hsl(252, 75%, 60%);
+    --primary:hsl( var(--primary-color-hue),  75%, 60%);
     --secondary:hsl(252, 100%, 90%);
     --success:hsl(120, 95%, 65%);
     --danger:hsl(0, 95%, 65%);
